--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.33.0
-pdfplumber==0.11.0
-python-docx==1.1.0
-pyttsx3==2.90
-pywin32
+pip install streamlit==1.33.0
+pip install pdfplumber==0.11.0
+pip install python-docx==1.1.0
+pip install pyttsx3==2.90
