--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python==3.5
-streamlit==1.33.0;
-pdfplumber==0.11.0;
-python-docx==1.1.0;
-pyttsx3==2.90;
+streamlit==1.33.0
+pdfplumber==0.11.0
+python-docx==1.1.0
+pyttsx3==2.90
